force-app/main/default/objects/BalanceAdjustmentReasonParams__mdt/BalanceAdjustmentReasonParams__mdt.object-meta.xml
<CustomObject>
    <description>Metadado criado para a parametrização dos motivos para a jornada de ressarcimento - Ajuste de Saldo - Bl15 Jornada 65 [Erik, Lucas, Gustavo]</description>
    <label>Parametrização Ajuste de Saldo - Motivo</label>
    <pluralLabel>Parametrizações Ajuste de Saldo - Motivo</pluralLabel>
</CustomObject>