force-app/main/default/objects/BalanceAdjustmentReasonParams__mdt/fields/MotivoAjuste__c.field-meta.xml
<CustomField>
    <fullName>MotivoAjuste__c</fullName>
    <label>Motivo de Ajuste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>