force-app/main/default/objects/BalanceAdjustmentReasonParams__mdt/fields/TipoAjusteCredito__c.field-meta.xml
<CustomField>
    <fullName>TipoAjusteCredito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tipo de Ajuste - Crédito</label>
    <type>Checkbox</type>
</CustomField>