force-app/main/default/objects/BalanceAdjustmentReasonParams__mdt/fields/TipoAjusteDebito__c.field-meta.xml
<CustomField>
    <fullName>TipoAjusteDebito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tipo de Ajuste - Débito</label>
    <type>Checkbox</type>
</CustomField>